--- a/polls/templates/polls/financial.html
+++ b/polls/templates/polls/financial.html
@@ -313,21 +313,21 @@
       <!--header end-->
 
       <!--sidebar start-->
-     <aside>
+      <aside>
           <div id="sidebar"  class="nav-collapse ">
               <!-- sidebar menu start-->
               <ul class="sidebar-menu">
                   <li class="active">
-                      <a class="" href="index.html">
+                      <a class="" href="{%  url 'index' 10%}">
                           <i class="icon_house_alt"></i>
                           <span>Dashboard</span>
                       </a>
                   </li>
 
 				  <li>
-                      <a class="" href="widgets.html">
+                      <a class="" href="{%  url 'neighbors' 10%}">
                           <i class="icon_genius"></i>
-                          <span>Financial</span>
+                          <span>Neighbors</span>
                       </a>
                   </li>
 
@@ -353,13 +353,14 @@
                       </a>
                   </li>
 
+                  {% if id == '10' %}
 				  <li>
-                      <a class="" href="widgets.html">
+                      <a class="" href="{%  url 'owner' 10%}">
                           <i class="icon_genius"></i>
-                          <span>Exit</span>
+                          <span>Owner</span>
                       </a>
                   </li>
-
+                    {% endif %}
 
 
               </ul>
@@ -376,10 +377,9 @@
 		  <div class="row">
 				<div class="col-lg-12">
 					<h3 class="page-header"><i class="fa fa-table"></i> Table</h3>
+                    //here is bread
 					<ol class="breadcrumb">
-						<li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-						<li><i class="fa fa-table"></i>Table</li>
-						<li><i class="fa fa-th-list"></i>Basic Table</li>
+						<li><i class="fa fa-home"></i><a href="{%  url 'index' 10%}">Home</a></li>
 					</ol>
 				</div>
 			</div>
@@ -395,12 +395,13 @@
                           <table class="table table-striped table-advance table-hover">
                            <tbody>
                               <tr>
-                                 <th><i class="icon_profile"></i> Bill Type </th>
+                                {% if type == 'bill' %} <th><i class="icon_profile"></i>  Bill Type </th> {% else %}
+                                                        <th><i class="icon_profile"></i>  Type </th> {% endif %}
                                  <th><i class="icon_calendar"></i> Date</th>
-                                 <th><i class="icon_mail_alt"></i> Value </th>
-                                 <th><i class="icon_pin_alt"></i> Is payed</th>
-                                 <th><i class="icon_mobile"></i> Mobile </th>
-                                 <th><i class="icon_cogs"></i> Action</th>
+                                 <th><i class="icon_mail_alt"></i> Amount </th>
+                                 <th><i class="icon_pin_alt"></i> Is payed </th>
+                                 <th><i class="icon_calendar"></i> Receipt Date </th>
+                                 <th><i class="icon_cogs"></i> Pay</th>
                               </tr>
                               <tr>
                                  <td>Angeline Mcclain</td>
