--- a/polls/templates/polls/neighbors.html
+++ b/polls/templates/polls/neighbors.html
@@ -16,10 +16,11 @@
     <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
     <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Form Component | Creative - Bootstrap 3 Responsive Admin Template</title>
+    <title>Basic Table | Creative - Bootstrap 3 Responsive Admin Template</title>
 
     <!-- Bootstrap CSS -->
-    {% load static %}
+
+     {% load static %}
     <link href="{% static "polls/css/bootstrap.min.css" %}" rel="stylesheet">
     <!-- bootstrap theme -->
     {% load static %}
@@ -36,16 +37,22 @@
     {% load static %}
     <link href="{% static "polls/css/style-responsive.css" %}" rel="stylesheet" />
 
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
       <script src="js/lte-ie7.js"></script>
+
+
+
+
+
+
     <![endif]-->
-
   </head>
-  <body>
 
+  <body>
   <!-- container section start -->
   <section id="container" class="">
       <!--header start-->
@@ -366,125 +373,96 @@
               <!-- sidebar menu end-->
           </div>
       </aside>
-      <!--sidebar end-->
+              <!-- sidebar menu end-->
+          </div>
+      </aside>
 
       <!--main content start-->
       <section id="main-content">
           <section class="wrapper">
 		  <div class="row">
-				<div class="col-lg-12">
-					<h3 class="page-header"><i class="fa fa-file-text-o"></i> Form elements</h3>
-					<ol class="breadcrumb">
-						<li><i class="fa fa-home"></i><a href="{%  url 'index' 10%}">Home</a></li>
-					</ol>
-				</div>
-			</div>
-              <div class="row">
-                  <div class="col-lg-12">
-                     ///from here
-                      {% if hasreserve == '0' %}
+                    ///add here
+              <div              style="width: 33.33333333333333%;
+                                              height: 660px;
+                                             overflow: auto;
+                                            position: relative;
+                                                 min-height: 1px;
+                                             padding-left: 15px;
+                                         padding-right: 15px;
+                             float: left;">
                       <section class="panel">
-                          <div class="panel-body">
-                              <form class="form-horizontal " method="get">
-                                  <div class="form-group">
-                                      <label class="control-label col-lg-2" for="inputSuccess">Choose a Facility</label>
-                                      <div class="col-lg-10">
+                          <header class="panel-heading">
+                              Neighbors' List
+                          </header>
 
-                                          <div class="radio">
-                                              <label>
-                                                  <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-                                                  Pool
-                                              </label>
-                                          </div>
-                                          <div class="radio">
-                                              <label>
-                                                  <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                                                  Gym
-                                              </label>
-                                          </div>
 
-                                      </div>
-                                  </div>
-                                  <div class="form-group">
-                                      <label class="control-label col-lg-2" for="inputSuccess">Options</label>
-                                      <div class="col-lg-10">
-                                          <label class="checkbox-inline">
-                                              <input type="checkbox" id="inlineCheckbox1" value="option1"> 1
-                                          </label>
-                                          <label class="checkbox-inline">
-                                              <input type="checkbox" id="inlineCheckbox2" value="option2"> 2
-                                          </label>
-                                          <label class="checkbox-inline">
-                                              <input type="checkbox" id="inlineCheckbox3" value="option3"> 3
-                                          </label>
 
-                                      </div>
-                                  </div>
-                                  <div class="form-group">
-                                      <label class="control-label col-lg-2" for="inputSuccess">Week Days</label>
-                                      <div class="col-lg-10">
-                                          <select class="form-control m-bot15">
-                                              <option>Saturday</option>
-                                              <option>Sunday</option>
-                                              <option>Monday</option>
-                                              <option>Tuesday</option>
-                                              <option>Wednesday</option>
-                                              <option>Thirsday</option>
-                                              <option>Friday</option>
-                                          </select>
 
-                                          <select multiple class="form-control">
-                                              <option>9-11</option>
-                                              <option>11-1</option>
-                                              <option>1-3</option>
-                                              <option>3-5</option>
-                                              <option>5-7</option>
-                                              <option>7-9</option>
-                                              <option>9-12</option>
-                                          </select>
-                                      </div>
-                                  </div>
-                                <button type="submit" class="btn btn-primary"> Reserve </button>
 
-                              </form>
-
-                              ///end of form
+                          <div class="list-group">
+                              <a class="list-group-item " href="#">
+                                  Ali Gatmiry
+                              </a>
+                              <a class="list-group-item active" href="{% url "guest" 10 20%}">Morteza Aghajani</a>
+                              <a class="list-group-item" href="javascript:;">Meysam Aghamohammadi</a>
+                              <a class="list-group-item" href="javascript:;">Amir Karimi</a>
+                              <a class="list-group-item" href="javascript:;">Arezoo Golestani</a>
+                              <a class="list-group-item" href="javascript:;">Fateme kalantari</a>
+                              {% if id == '10' %}
+                                <a class="btn btn-success" style="width: 100%; height: 40px" data-toggle="modal" href="{% url "validation" 10%}">
+                                              Add Neighbor
+                                           </a>
+                              {% endif %}
                           </div>
                       </section>
-
-                      {% else %}
-                       <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-					         <div class="info-box green-bg">
-						         <i class="fa fa-cubes"></i>
-						        <div class="count">Pool</div>
-						        <div class="title">Monday</div>
-                                <div class="title">9-11</div>
-					         </div><!--/.info-box-->
-                            <a href="#myModal-2" data-toggle="modal" class="btn  btn-danger">
-                                  Cancel
+                  </div>
+                    ////right one
+                    <div              style="width: 33.33333333333333%;
+                                              height: 660px;
+                                             overflow: auto;
+                                            position: relative;
+                                                 min-height: 1px;
+                                             padding-left: 15px;
+                                         padding-right: 15px;
+                                         width: 650px;
+                             float: left;">
+                      <section class="panel">
+                          <header class="panel-heading">
+                              Messages
+                          </header>
+                          <div class="list-group">
+                              <a class="list-group-item " href="javascript:;">
+                                  <h4 class="list-group-item-heading">Ali Gatmiry</h4>
+                                  <p class="list-group-item-text">motalee.</p>
                               </a>
-				        </div>
-                      {%  endif %}
-
+                              <a class="list-group-item active" href="javascript:;">
+                                  <h4 class="list-group-item-heading">Arezoo Kalantari</h4>
+                                  <p class="list-group-item-text">Ghabz ha</p>
+                              </a>
+                              <a class="list-group-item" href="javascript:;">
+                                  <h4 class="list-group-item-heading">Ali Gatmiri</h4>
+                                  <p class="list-group-item-text">Asr</p>
+                              </a>
+                          </div>
+                      </section>
                   </div>
               </div>
-              <!-- Basic Forms & Horizontal Forms-->
 
               <!-- page end-->
           </section>
       </section>
       <!--main content end-->
       <div class="text-right">
-        <div class="credits">
-            <!--
-                All the links in the footer should remain intact.
-                You can delete the links only if you purchased the pro version.
-                Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
-            -->
-
+            <div class="credits">
+                <!--
+                    All the links in the footer should remain intact.
+                    You can delete the links only if you purchased the pro version.
+                    Licensing information: https://bootstrapmade.com/license/
+                    Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
+                -->
+                <a href="https://bootstrapmade.com/free-business-bootstrap-themes-website-templates/">Business Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            </div>
         </div>
-    </div>
   </section>
   <!-- container section end -->
     <!-- javascripts -->
@@ -496,7 +474,8 @@
     {% load static %}
     <script src="{% static "polls/js/jquery.scrollTo.min.js" %}"></script>
     {% load static %}
-    <script src="{% static "polls/js/jquery.nicescroll.js" %}" type="text/javascript" ></script>
+    <script src="{% static "polls/js/jquery.nicescroll.js" %}" type="text/javascript"></script>
+    <!-- jquery knob -->
     {% load static %}
     <script src="{% static "polls/assets/jquery-knob/js/jquery.knob.js" %}"></script>
     <!--custome script for all page-->
@@ -504,32 +483,9 @@
     <script src="{% static "polls/js/scripts.js" %}"></script>
 
 
-    <!-- jquery ui -->
-    <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
-
-    <!--custom checkbox & radio-->
-    <script type="text/javascript" src="js/ga.js"></script>
-    <!--custom switch-->
-    <script src="js/bootstrap-switch.js"></script>
-    <!--custom tagsinput-->
-    <script src="js/jquery.tagsinput.js"></script>
-
-    <!-- colorpicker -->
-
-    <!-- bootstrap-wysiwyg -->
-    <script src="js/jquery.hotkeys.js"></script>
-    <script src="js/bootstrap-wysiwyg.js"></script>
-    <script src="js/bootstrap-wysiwyg-custom.js"></script>
-    <!-- ck editor -->
-    <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
-    <!-- custom form component script for this page-->
-    <script src="js/form-component.js"></script>
-    <!-- custome script for all page -->
-    <script src="js/scripts.js"></script>
-
-
   </body>
 </html>
+
 
 
 </body>
