--- a/polls/templates/polls/owner.html
+++ b/polls/templates/polls/owner.html
@@ -2,6 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Owner</title>
+</head>
+<body>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
@@ -16,10 +33,11 @@
     <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
     <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Form Component | Creative - Bootstrap 3 Responsive Admin Template</title>
+    <title>Basic Table | Creative - Bootstrap 3 Responsive Admin Template</title>
 
     <!-- Bootstrap CSS -->
-    {% load static %}
+
+     {% load static %}
     <link href="{% static "polls/css/bootstrap.min.css" %}" rel="stylesheet">
     <!-- bootstrap theme -->
     {% load static %}
@@ -36,16 +54,16 @@
     {% load static %}
     <link href="{% static "polls/css/style-responsive.css" %}" rel="stylesheet" />
 
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
       <script src="js/lte-ie7.js"></script>
     <![endif]-->
-
   </head>
-  <body>
 
+  <body>
   <!-- container section start -->
   <section id="container" class="">
       <!--header start-->
@@ -366,125 +384,82 @@
               <!-- sidebar menu end-->
           </div>
       </aside>
-      <!--sidebar end-->
+              <!-- sidebar menu end-->
+          </div>
+      </aside>
 
       <!--main content start-->
       <section id="main-content">
           <section class="wrapper">
 		  <div class="row">
-				<div class="col-lg-12">
-					<h3 class="page-header"><i class="fa fa-file-text-o"></i> Form elements</h3>
-					<ol class="breadcrumb">
-						<li><i class="fa fa-home"></i><a href="{%  url 'index' 10%}">Home</a></li>
-					</ol>
-				</div>
-			</div>
-              <div class="row">
-                  <div class="col-lg-12">
-                     ///from here
-                      {% if hasreserve == '0' %}
+                <div class="col-lg-12">
                       <section class="panel">
-                          <div class="panel-body">
-                              <form class="form-horizontal " method="get">
-                                  <div class="form-group">
-                                      <label class="control-label col-lg-2" for="inputSuccess">Choose a Facility</label>
-                                      <div class="col-lg-10">
-
-                                          <div class="radio">
-                                              <label>
-                                                  <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-                                                  Pool
-                                              </label>
-                                          </div>
-                                          <div class="radio">
-                                              <label>
-                                                  <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                                                  Gym
-                                              </label>
-                                          </div>
-
-                                      </div>
-                                  </div>
-                                  <div class="form-group">
-                                      <label class="control-label col-lg-2" for="inputSuccess">Options</label>
-                                      <div class="col-lg-10">
-                                          <label class="checkbox-inline">
-                                              <input type="checkbox" id="inlineCheckbox1" value="option1"> 1
-                                          </label>
-                                          <label class="checkbox-inline">
-                                              <input type="checkbox" id="inlineCheckbox2" value="option2"> 2
-                                          </label>
-                                          <label class="checkbox-inline">
-                                              <input type="checkbox" id="inlineCheckbox3" value="option3"> 3
-                                          </label>
-
-                                      </div>
-                                  </div>
-                                  <div class="form-group">
-                                      <label class="control-label col-lg-2" for="inputSuccess">Week Days</label>
-                                      <div class="col-lg-10">
-                                          <select class="form-control m-bot15">
-                                              <option>Saturday</option>
-                                              <option>Sunday</option>
-                                              <option>Monday</option>
-                                              <option>Tuesday</option>
-                                              <option>Wednesday</option>
-                                              <option>Thirsday</option>
-                                              <option>Friday</option>
-                                          </select>
-
-                                          <select multiple class="form-control">
-                                              <option>9-11</option>
-                                              <option>11-1</option>
-                                              <option>1-3</option>
-                                              <option>3-5</option>
-                                              <option>5-7</option>
-                                              <option>7-9</option>
-                                              <option>9-12</option>
-                                          </select>
-                                      </div>
-                                  </div>
-                                <button type="submit" class="btn btn-primary"> Reserve </button>
-
-                              </form>
-
-                              ///end of form
+                          <header class="panel-heading">
+                             Monthly Payments
+                          </header>
+                          <div class="table-responsive">
+                            <table class="table">
+                              <thead>
+                                <tr>
+                                  <th>#</th>
+                                  <th>Due Date</th>
+                                  <th>Amount</th>
+                                  <th>Compeletely Payed</th>
+                                  <th>Payed Amount</th>
+                                  <th>Last Payed</th>
+                                  <th>Delay Time</th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr>
+                                  <td>1</td>
+                                  <td>Table cell</td>
+                                  <td>Table cell</td>
+                                  <td>Table cell</td>
+                                  <td>Table cell</td>
+                                  <td>Table cell</td>
+                                  <td>Table cell</td>
+                                </tr>
+                                <tr>
+                                  <td>2</td>
+                                  <td>Table cell</td>
+                                  <td>Table cell</td>
+                                  <td>Table cell</td>
+                                  <td>Table cell</td>
+                                  <td>Table cell</td>
+                                  <td>Table cell</td>
+                                </tr>
+                                <tr>
+                                  <td>3</td>
+                                  <td>Table cell</td>
+                                  <td>Table cell</td>
+                                  <td>Table cell</td>
+                                  <td>Table cell</td>
+                                  <td>Table cell</td>
+                                  <td>Table cell</td>
+                                </tr>
+                              </tbody>
+                            </table>
                           </div>
+
                       </section>
-
-                      {% else %}
-                       <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-					         <div class="info-box green-bg">
-						         <i class="fa fa-cubes"></i>
-						        <div class="count">Pool</div>
-						        <div class="title">Monday</div>
-                                <div class="title">9-11</div>
-					         </div><!--/.info-box-->
-                            <a href="#myModal-2" data-toggle="modal" class="btn  btn-danger">
-                                  Cancel
-                              </a>
-				        </div>
-                      {%  endif %}
-
                   </div>
               </div>
-              <!-- Basic Forms & Horizontal Forms-->
-
               <!-- page end-->
           </section>
       </section>
       <!--main content end-->
       <div class="text-right">
-        <div class="credits">
-            <!--
-                All the links in the footer should remain intact.
-                You can delete the links only if you purchased the pro version.
-                Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
-            -->
+            <div class="credits">
+                <!--
+                    All the links in the footer should remain intact.
+                    You can delete the links only if you purchased the pro version.
+                    Licensing information: https://bootstrapmade.com/license/
+                    Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
+                -->
 
+            </div>
         </div>
-    </div>
   </section>
   <!-- container section end -->
     <!-- javascripts -->
@@ -496,7 +471,8 @@
     {% load static %}
     <script src="{% static "polls/js/jquery.scrollTo.min.js" %}"></script>
     {% load static %}
-    <script src="{% static "polls/js/jquery.nicescroll.js" %}" type="text/javascript" ></script>
+    <script src="{% static "polls/js/jquery.nicescroll.js" %}" type="text/javascript"></script>
+    <!-- jquery knob -->
     {% load static %}
     <script src="{% static "polls/assets/jquery-knob/js/jquery.knob.js" %}"></script>
     <!--custome script for all page-->
@@ -504,31 +480,15 @@
     <script src="{% static "polls/js/scripts.js" %}"></script>
 
 
-    <!-- jquery ui -->
-    <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
-
-    <!--custom checkbox & radio-->
-    <script type="text/javascript" src="js/ga.js"></script>
-    <!--custom switch-->
-    <script src="js/bootstrap-switch.js"></script>
-    <!--custom tagsinput-->
-    <script src="js/jquery.tagsinput.js"></script>
-
-    <!-- colorpicker -->
-
-    <!-- bootstrap-wysiwyg -->
-    <script src="js/jquery.hotkeys.js"></script>
-    <script src="js/bootstrap-wysiwyg.js"></script>
-    <script src="js/bootstrap-wysiwyg-custom.js"></script>
-    <!-- ck editor -->
-    <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
-    <!-- custom form component script for this page-->
-    <script src="js/form-component.js"></script>
-    <!-- custome script for all page -->
-    <script src="js/scripts.js"></script>
-
-
   </body>
+</html>
+
+
+
+</body>
+</html>
+
+</body>
 </html>
 
 
