--- a/polls/templates/polls/validation.html
+++ b/polls/templates/polls/validation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Validation</title>
 </head>
 <body>
 
@@ -16,10 +16,10 @@
     <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
     <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Form Component | Creative - Bootstrap 3 Responsive Admin Template</title>
+    <title>Form Validation | Creative - Bootstrap 3 Responsive Admin Template</title>
 
     <!-- Bootstrap CSS -->
-    {% load static %}
+     {% load static %}
     <link href="{% static "polls/css/bootstrap.min.css" %}" rel="stylesheet">
     <!-- bootstrap theme -->
     {% load static %}
@@ -38,14 +38,24 @@
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
     <!--[if lt IE 9]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.min.js"></script>
-      <script src="js/lte-ie7.js"></script>
+    {% load static %}
+    <script src="{% static "polls/js/jquery.js"  %}"></script>
+    {% load static %}
+    <script src="{% static "polls/js/bootstrap.min.js"  %}"></script>
+    <!-- nice scroll -->
+    {% load static %}
+    <script src="{% static "polls/js/jquery.scrollTo.min.js" %}"></script>
+    {% load static %}
+    <script src="{% static "polls/js/jquery.nicescroll.js" %}" type="text/javascript" ></script>
+    {% load static %}
+    <script src="{% static "polls/assets/jquery-knob/js/jquery.knob.js" %}"></script>
+    <!--custome script for all page-->
+    {% load static %}
+    <script src="{% static "polls/js/scripts.js" %}"></script>
     <![endif]-->
-
   </head>
-  <body>
 
+  <body>
   <!-- container section start -->
   <section id="container" class="">
       <!--header start-->
@@ -312,7 +322,7 @@
       <!--header end-->
 
       <!--sidebar start-->
-     <aside>
+       <aside>
           <div id="sidebar"  class="nav-collapse ">
               <!-- sidebar menu start-->
               <ul class="sidebar-menu">
@@ -373,102 +383,66 @@
           <section class="wrapper">
 		  <div class="row">
 				<div class="col-lg-12">
-					<h3 class="page-header"><i class="fa fa-file-text-o"></i> Form elements</h3>
+					<h3 class="page-header"><i class="fa fa-files-o"></i> Form Validation</h3>
 					<ol class="breadcrumb">
-						<li><i class="fa fa-home"></i><a href="{%  url 'index' 10%}">Home</a></li>
+						<li><i class="fa fa-home"></i><a href="{% url 'index' id %}">Home</a></li>
 					</ol>
 				</div>
 			</div>
+              <!-- Form validations -->
               <div class="row">
                   <div class="col-lg-12">
-                     ///from here
-                      {% if hasreserve == '0' %}
                       <section class="panel">
+                          <header class="panel-heading">
+                              Form validations
+                          </header>
                           <div class="panel-body">
-                              <form class="form-horizontal " method="get">
-                                  <div class="form-group">
-                                      <label class="control-label col-lg-2" for="inputSuccess">Choose a Facility</label>
-                                      <div class="col-lg-10">
-
-                                          <div class="radio">
-                                              <label>
-                                                  <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-                                                  Pool
-                                              </label>
+                              <div class="form">
+                                  <form class="form-validate form-horizontal" id="feedback_form" method="get" action="">
+                                      <div class="form-group ">
+                                          <label for="cname" class="control-label col-lg-2">Full Name <span class="required">*</span></label>
+                                          <div class="col-lg-10">
+                                              <input class="form-control" id="cname" name="fullname" minlength="5" type="text" required />
                                           </div>
-                                          <div class="radio">
-                                              <label>
-                                                  <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                                                  Gym
-                                              </label>
+                                      </div>
+                                      <div class="form-group ">
+                                          <label for="cemail" class="control-label col-lg-2">E-Mail <span class="required">*</span></label>
+                                          <div class="col-lg-10">
+                                              <input class="form-control " id="cemail" type="email" name="email" required />
                                           </div>
-
                                       </div>
-                                  </div>
-                                  <div class="form-group">
-                                      <label class="control-label col-lg-2" for="inputSuccess">Options</label>
-                                      <div class="col-lg-10">
-                                          <label class="checkbox-inline">
-                                              <input type="checkbox" id="inlineCheckbox1" value="option1"> 1
-                                          </label>
-                                          <label class="checkbox-inline">
-                                              <input type="checkbox" id="inlineCheckbox2" value="option2"> 2
-                                          </label>
-                                          <label class="checkbox-inline">
-                                              <input type="checkbox" id="inlineCheckbox3" value="option3"> 3
-                                          </label>
-
+                                      <div class="form-group ">
+                                          <label for="curl" class="control-label col-lg-2">Website</label>
+                                          <div class="col-lg-10">
+                                              <input class="form-control " id="curl" type="url" name="url" />
+                                          </div>
                                       </div>
-                                  </div>
-                                  <div class="form-group">
-                                      <label class="control-label col-lg-2" for="inputSuccess">Week Days</label>
-                                      <div class="col-lg-10">
-                                          <select class="form-control m-bot15">
-                                              <option>Saturday</option>
-                                              <option>Sunday</option>
-                                              <option>Monday</option>
-                                              <option>Tuesday</option>
-                                              <option>Wednesday</option>
-                                              <option>Thirsday</option>
-                                              <option>Friday</option>
-                                          </select>
-
-                                          <select multiple class="form-control">
-                                              <option>9-11</option>
-                                              <option>11-1</option>
-                                              <option>1-3</option>
-                                              <option>3-5</option>
-                                              <option>5-7</option>
-                                              <option>7-9</option>
-                                              <option>9-12</option>
-                                          </select>
+                                      <div class="form-group ">
+                                          <label for="cname" class="control-label col-lg-2">Subject <span class="required">*</span></label>
+                                          <div class="col-lg-10">
+                                              <input class="form-control" id="subject" name="subject" minlength="5" type="text" required />
+                                          </div>
                                       </div>
-                                  </div>
-                                <button type="submit" class="btn btn-primary"> Reserve </button>
+                                      <div class="form-group ">
+                                          <label for="ccomment" class="control-label col-lg-2">Feedback</label>
+                                          <div class="col-lg-10">
+                                              <textarea class="form-control " id="ccomment" name="comment" required></textarea>
+                                          </div>
+                                      </div>
+                                      <div class="form-group">
+                                          <div class="col-lg-offset-2 col-lg-10">
+                                              <button class="btn btn-primary" type="submit">Sing Up</button>
+                                              <button class="btn btn-default" type="button">Cancel</button>
+                                          </div>
+                                      </div>
+                                  </form>
+                              </div>
 
-                              </form>
-
-                              ///end of form
                           </div>
                       </section>
-
-                      {% else %}
-                       <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-					         <div class="info-box green-bg">
-						         <i class="fa fa-cubes"></i>
-						        <div class="count">Pool</div>
-						        <div class="title">Monday</div>
-                                <div class="title">9-11</div>
-					         </div><!--/.info-box-->
-                            <a href="#myModal-2" data-toggle="modal" class="btn  btn-danger">
-                                  Cancel
-                              </a>
-				        </div>
-                      {%  endif %}
-
                   </div>
               </div>
-              <!-- Basic Forms & Horizontal Forms-->
+
 
               <!-- page end-->
           </section>
@@ -482,49 +456,24 @@
                 Licensing information: https://bootstrapmade.com/license/
                 Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
             -->
-
+            <a href="https://bootstrapmade.com/free-business-bootstrap-themes-website-templates/">Business Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
     </div>
   </section>
   <!-- container section end -->
+
     <!-- javascripts -->
-    {% load static %}
-    <script src="{% static "polls/js/jquery.js"  %}"></script>
-    {% load static %}
-    <script src="{% static "polls/js/bootstrap.min.js"  %}"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- nice scroll -->
-    {% load static %}
-    <script src="{% static "polls/js/jquery.scrollTo.min.js" %}"></script>
-    {% load static %}
-    <script src="{% static "polls/js/jquery.nicescroll.js" %}" type="text/javascript" ></script>
-    {% load static %}
-    <script src="{% static "polls/assets/jquery-knob/js/jquery.knob.js" %}"></script>
+    <script src="js/jquery.scrollTo.min.js"></script>
+    <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
+    <!-- jquery validate js -->
+    <script type="text/javascript" src="js/jquery.validate.min.js"></script>
+
+    <!-- custom form validation script for this page-->
+    <script src="js/form-validation-script.js"></script>
     <!--custome script for all page-->
-    {% load static %}
-    <script src="{% static "polls/js/scripts.js" %}"></script>
-
-
-    <!-- jquery ui -->
-    <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
-
-    <!--custom checkbox & radio-->
-    <script type="text/javascript" src="js/ga.js"></script>
-    <!--custom switch-->
-    <script src="js/bootstrap-switch.js"></script>
-    <!--custom tagsinput-->
-    <script src="js/jquery.tagsinput.js"></script>
-
-    <!-- colorpicker -->
-
-    <!-- bootstrap-wysiwyg -->
-    <script src="js/jquery.hotkeys.js"></script>
-    <script src="js/bootstrap-wysiwyg.js"></script>
-    <script src="js/bootstrap-wysiwyg-custom.js"></script>
-    <!-- ck editor -->
-    <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
-    <!-- custom form component script for this page-->
-    <script src="js/form-component.js"></script>
-    <!-- custome script for all page -->
     <script src="js/scripts.js"></script>
 
 
